<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_text_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:gravity="center_horizontal"
                android:textColor="#000000"
                android:text="0"/>

            <TextView
                android:id="@+id/result_text_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:text="Select from the options of each question"/>

            <View
                android:layout_width="match_parent"
                android:layout_marginHorizontal="46dp"
                android:layout_height="1dp"
                android:background="#000000">
            </View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q1_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q1_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_a" />

                    <RadioButton
                        android:id="@+id/q1_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_b" />

                    <RadioButton
                        android:id="@+id/q1_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_c" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q2_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q2_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_a" />

                    <RadioButton
                        android:id="@+id/q2_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_b" />

                    <RadioButton
                        android:id="@+id/q2_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_c" />

                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q3_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q3_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_a" />

                    <RadioButton
                        android:id="@+id/q3_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_b" />

                    <RadioButton
                        android:id="@+id/q3_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_c" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q4_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q4_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_a" />

                    <RadioButton
                        android:id="@+id/q4_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_b" />

                    <RadioButton
                        android:id="@+id/q4_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_c" />

                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q5_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q5_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_a" />

                    <RadioButton
                        android:id="@+id/q5_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_b" />

                    <RadioButton
                        android:id="@+id/q5_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_c" />

                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q6_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q6_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_a" />

                    <RadioButton
                        android:id="@+id/q6_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_b" />

                    <RadioButton
                        android:id="@+id/q6_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_c" />

                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q7_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q7_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_a" />

                    <RadioButton
                        android:id="@+id/q7_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_b" />

                    <RadioButton
                        android:id="@+id/q7_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_c" />

                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8_text"
                    android:textColor="#000"/>

                <RadioGroup
                    android:id="@+id/q8_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q8_option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_a" />

                    <RadioButton
                        android:id="@+id/q8_option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_b" />

                    <RadioButton
                        android:id="@+id/q8_option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_c" />

                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:text="Mark"
                    android:onClick="markQuiz"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:text="Clear"
                    android:onClick="clearChoices"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>